--- a/app/src/main/res/layout/fragment_voice_notes.xml
+++ b/app/src/main/res/layout/fragment_voice_notes.xml
@@ -30,9 +30,35 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_voice_notes"
+        android:layout_width="fill_parent"
+        android:layout_height="570dp"
+        tools:listitem="@layout/item_voice_note" />
+
+    <View style="@style/Divider"/>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/item_voice_note"/>
+        android:layout_height="fill_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <ImageButton
+            android:id="@+id/record"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:contentDescription="@string/record_capital"
+            app:srcCompat="@drawable/ic_baseline_mic_24" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:text="00.00.00" />
+
+    </LinearLayout>
 
 
 </LinearLayout>
